--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="./public/logo192.png" />
+    <link rel="apple-touch-icon" href="/logo192.png" />
 
-    <link rel="manifest" href="./public/manifest.json" />
+    <link rel="manifest" href="/manifest.json" />
 
     <title>Frame Works</title>
   </head>
